--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       background-color: var(--blog-dark-main);
     }
   </style>
-  <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src='node_modules/moment/min/moment-with-locales.min.js'></script>
+  <script type="text/javascript" src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="text/javascript" src='node_modules/moment/min/moment-with-locales.min.js'></script>
   <script>moment.locale('pt-BR')</script>
   <script type="module" src='src/blog-main.js'></script>
 </head>
