--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!doctype html>
 <html>
 <head lang='pt-BR'>
-  <meta charset='utf-8'>
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <meta charset='utf-8'>
   <title>Paulo Alexandre</title>
   <meta name="description" content="paulequilibrio's programming blog">
   <link rel="icon" href="./images/manifest/icon-32x32.png">
-  <link rel="stylesheet" href="./palette.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: "Roboto", "Noto", sans-serif;
+      line-height: 1.5;
+      min-height: 100vh;
+    }
+  </style>
   <script type="text/javascript" src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="text/javascript" src='node_modules/moment/min/moment-with-locales.min.js'></script>
   <script>moment.locale('pt-BR')</script>
