--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-<head lang='pt-BR'>
+<head lang="pt-BR">
+  <meta charset="utf-8">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-  <meta charset='utf-8'>
   <title>Paulo Alexandre</title>
   <meta name="description" content="paulequilibrio's programming blog">
   <link rel="icon" href="./images/manifest/icon-32x32.png">
@@ -14,10 +14,13 @@
       min-height: 100vh;
     }
   </style>
-  <script type="text/javascript" src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script type="text/javascript" src='node_modules/moment/min/moment-with-locales.min.js'></script>
+  <script type="text/javascript" src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="text/javascript" src="./node_modules/moment/min/moment-with-locales.min.js"></script>
   <script>moment.locale('pt-BR')</script>
-  <script type="module" src='src/blog-main.js'></script>
+  <script src="./node_modules/prismjs/prism.js"></script>
+  <script src="./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"></script>
+  <script src="./node_modules/prismjs/plugins/unescaped-markup/prism-unescaped-markup.min.js"></script>
+  <script type="module" src="./src/blog-main.js"></script>
 </head>
 <body>
   <blog-main></blog-main>
