--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
   <title>Paulo Alexandre</title>
   <meta name="description" content="paulequilibrio's programming blog">
-  <link rel="icon" href="./images/manifest/icon-32x32.png">
+  <link rel="icon" href="images/manifest/icon-32x32.png">
   <style>
     body {
       margin: 0;
@@ -14,12 +14,12 @@
       min-height: 100vh;
     }
   </style>
-  <script type="text/javascript" src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script type="text/javascript" src="./node_modules/moment/min/moment-with-locales.min.js"></script>
+  <script type="text/javascript" src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="text/javascript" src="node_modules/moment/min/moment-with-locales.min.js"></script>
   <script>moment.locale('pt-BR')</script>
-  <script src="./node_modules/prismjs/prism.js"></script>
-  <script src="./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"></script>
-  <script src="./node_modules/prismjs/plugins/unescaped-markup/prism-unescaped-markup.min.js"></script>
+  <script src="node_modules/prismjs/prism.js"></script>
+  <script src="node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"></script>
+  <script src="node_modules/prismjs/plugins/unescaped-markup/prism-unescaped-markup.min.js"></script>
   <script type="module" src="./src/blog-main.js"></script>
 </head>
 <body>
