--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="node_modules/prismjs/prism.js"></script>
   <script src="node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"></script>
   <script src="node_modules/prismjs/plugins/unescaped-markup/prism-unescaped-markup.min.js"></script>
-  <script type="module" src="./src/blog-main.js"></script>
+  <script type="module" src="src/blog-main.js"></script>
 </head>
 <body>
   <blog-main></blog-main>
